--- a/umpc/d8/review.htm
+++ b/umpc/d8/review.htm
@@ -44,14 +44,14 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>iriver Dicple D100</h3>
+<h3>iriver Dicple D8</h3>
 <p><b>介紹</b></p>
 <hr size="1">
 <p>
 簡要規格
 </p>
 <table>
-  <tr><th>CPU</th><td>TCC7901 ARM926EJ-S Dual-core 500MHZ</td></tr>
+  <tr><th>CPU</th><td>Ingenic JZ4755 MIPS32 rev1 336MHZ</td></tr>
   <tr><th>RAM</th><td>64MB</td></tr>
   <tr><th>Flash</th><td>4GB</td></tr>
   <tr><th>Screen</th><td>4.3" 480x272 電阻觸控</td></tr>
