--- a/umpc.htm
+++ b/umpc.htm
@@ -75,7 +75,9 @@
 <br><br>
 <p>
     <a href="#d5"><img src="img/photos/d5.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="iriver Dicple D5"/></a>
+    <a href="#d8"><img src="img/photos/d8.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="iriver Dicple D8"/></a>
     <a href="#d88"><img src="img/photos/d88.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="iriver Dicple D88"/></a>
+    <a href="#d100"><img src="img/photos/d100.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="iriver Dicple D100"/></a>
     <a href="#c700"><img src="img/photos/c700.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Zaurus SL-C700"/></a>
     <a href="#c750"><img src="img/photos/c750.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Zaurus SL-C750"/></a>
     <a href="#c760"><img src="img/photos/c760.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Zaurus SL-C760"/></a>
@@ -211,6 +213,20 @@ iriver Dicple D5</h3>
 &lowast;
 <a href="umpc/d5/mmap.htm">
 Memory Map</a><br>
+<br><br><br><br>
+
+<div id="d8"></div>
+<h3><img src="img/photos/d8.jpg" class="floatLeft"/>
+iriver Dicple D8</h3>
+<hr size="1"><br><br><br><br><br>
+
+&lowast;
+<a href="umpc/d8/review.htm">
+介紹</a><br>
+
+&lowast;
+<a href="umpc/d8/teardown.htm">
+拆機</a><br>
 <br><br><br><br>
 
 <div id="d88"></div>
@@ -397,7 +413,20 @@ build mkyaffs2image</a><br>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="umpc/d88/cpp_kbd.htm">
     Keyboard</a><br>
+<br><br><br><br>
 
+<div id="d100"></div>
+<h3><img src="img/photos/d100.jpg" class="floatLeft"/>
+iriver Dicple D100</h3>
+<hr size="1"><br><br><br><br><br>
+
+&lowast;
+<a href="umpc/d100/review.htm">
+介紹</a><br>
+
+&lowast;
+<a href="umpc/d100/teardown.htm">
+拆機</a><br>
 <br><br><br><br>
 
 <div id="c700"></div>
