--- a/umpc/d100/teardown.htm
+++ b/umpc/d100/teardown.htm
@@ -63,7 +63,7 @@
 觸控筆<br>
 <img src="teardown/5.jpg" class="maxSize"><br><br>
 
-鍵盤還可以～<br>
+還可以的鍵盤～<br>
 <img src="teardown/6.jpg" class="maxSize"><br><br>
 
 背面<br>
