--- a/umpc/d8/teardown.htm
+++ b/umpc/d8/teardown.htm
@@ -81,6 +81,18 @@ PCB<br>
 拿掉電池<br>
 <img src="teardown/11.jpg" class="maxSize"><br><br>
 
+PCB<br>
+<img src="teardown/20.jpg" class="maxSize"><br><br>
+
+A3V56S40ETP-G6、K9LBG08U0D、JZ4755<br>
+<img src="teardown/21.jpg" class="maxSize"><br><br>
+
+WM8731S、V24230 9AK0<br>
+<img src="teardown/22.jpg" class="maxSize"><br><br>
+
+鍋仔片<br>
+<img src="teardown/23.jpg" class="maxSize"><br><br>
+
 鍵盤<br>
 <img src="teardown/12.jpg" class="maxSize"><br>
 <img src="teardown/13.jpg" class="maxSize"><br><br>
