--- a/umpc.htm
+++ b/umpc.htm
@@ -227,6 +227,10 @@ iriver Dicple D8</h3>
 &lowast;
 <a href="umpc/d8/teardown.htm">
 拆機</a><br>
+
+&lowast;
+<a href="umpc/d8/uart.htm">
+UART、BOOT腳位</a><br>
 <br><br><br><br>
 
 <div id="d88"></div>
