D8 How to solder boot pins.

--- a/umpc.htm
+++ b/umpc.htm
@@ -229,6 +229,10 @@ iriver Dicple D8</h3>
 拆機</a><br>
 
 &lowast;
+<a href="umpc/d8/bootpin.htm">
+焊接BOOT腳位</a><br>
+
+&lowast;
 <a href="umpc/d8/uart.htm">
 UART、BOOT腳位</a><br>
 <br><br><br><br>
