D8 How to replace battery.

--- a/umpc.htm
+++ b/umpc.htm
@@ -229,6 +229,10 @@ iriver Dicple D8</h3>
 拆機</a><br>
 
 &lowast;
+<a href="umpc/d8/battery.htm">
+更換電池</a><br>
+
+&lowast;
 <a href="umpc/d8/bootpin.htm">
 焊接BOOT腳位</a><br>
 
