D8 How to resize mtd.

--- a/umpc.htm
+++ b/umpc.htm
@@ -239,6 +239,10 @@ iriver Dicple D8</h3>
 &lowast;
 <a href="umpc/d8/uart.htm">
 UART、BOOT腳位</a><br>
+
+&lowast;
+<a href="umpc/d8/mtd_size.htm">
+如何調整MTD大小</a><br>
 <br><br><br><br>
 
 <div id="d88"></div>
