D8 How solder uart debug port.

--- a/umpc.htm
+++ b/umpc.htm
@@ -233,6 +233,10 @@ iriver Dicple D8</h3>
 更換電池</a><br>
 
 &lowast;
+<a href="umpc/d8/jack.htm">
+焊接UART腳位</a><br>
+
+&lowast;
 <a href="umpc/d8/bootpin.htm">
 焊接BOOT腳位</a><br>
 
