D8 Fix cursor issue.

--- a/umpc.htm
+++ b/umpc.htm
@@ -247,6 +247,10 @@ UART、BOOT腳位</a><br>
 &lowast;
 <a href="umpc/d8/mtd_size.htm">
 如何調整MTD大小</a><br>
+
+&lowast;
+<a href="umpc/d8/fix_cursor.htm">
+解決Cursor無法顯示的問題</a><br>
 <br><br><br><br>
 
 <div id="d88"></div>
