D88 Another UART modding.

--- a/umpc.htm
+++ b/umpc.htm
@@ -295,6 +295,10 @@ RTC取得、設定</a><br>
 鍵盤和GPIO對應表</a><br>
 
 &lowast;
+<a href="umpc/d88/jack.htm">
+使用耳機孔當作UART傳輸介面</a><br>
+
+&lowast;
 <a href="umpc/d88/set_bl.htm">
 如何設定背光</a><br>
 
