--- a/umpc.htm
+++ b/umpc.htm
@@ -276,7 +276,11 @@ iriver Dicple D88</h3>
 
 &lowast;
 <a href="umpc/d88/battery.htm">
-更換電池</a><br>
+更換電池(1500mA)</a><br>
+
+&lowast;
+<a href="umpc/d88/battery2.htm">
+更換電池(1800mA)</a><br>
 
 &lowast;
 <a href="umpc/d88/keymap.htm">
