--- a/umpc/d88/battery2.htm
+++ b/umpc/d88/battery2.htm
@@ -45,20 +45,11 @@
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
 <h3>iriver Dicple D88</h3>
-<p><b>更換電池(1500mA)</b></p>
+<p><b>更換電池(1800mA)</b></p>
 <hr size="1">
 <p>
-原本電池已經沒有蓄電能力<br>
-<img src="battery/1.jpg" class="maxSize"><br><br>
-
-剛好司徒手邊有603759 1500mA，尺寸如果可以長一點點會更完美<br>
-<img src="battery/2.jpg" class="maxSize"><br><br>
-
-高度相當不錯<br>
-<img src="battery/3.jpg" class="maxSize"><br><br>
-
-完美～<br>
-<img src="battery/4.jpg" class="maxSize">
+503575 1800mA電池<br>
+<img src="battery2/1.jpg" class="maxSize">
 </p>
 
 <p>
