--- a/umpc.htm
+++ b/umpc.htm
@@ -383,14 +383,6 @@ build gdb</a><br>
 build uboot</a><br>
 
 &lowast;
-<a href="umpc/d88/build_kernel-2.6.24.htm">
-build kernel 2.6.24</a><br>
-
-&lowast;
-<a href="umpc/d88/build_kernel-2.6.31.htm">
-build kernel 2.6.31</a><br>
-
-&lowast;
 <a href="umpc/d88/build_gmenu2x.htm">
 build gmenu2x</a><br>
 
@@ -417,6 +409,10 @@ build mkyaffs2image</a><br>
     <a href="umpc/d88/stock_debug.htm">
     如何透過USB UART Debug</a><br>
 
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="umpc/d88/stock_build_kernel-2.6.24.htm">
+    build kernel 2.6.24</a><br>
+
 &oplus;
 <b>RetroFW</b><br>
 
@@ -433,7 +429,7 @@ build mkyaffs2image</a><br>
     build gmenunx</a><br>
     
 &oplus;
-<b>Debian</b><br>
+<b>Debian 6</b><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="umpc/d88/debian_setup.htm">
