--- a/umpc/d88/debian_setup.htm
+++ b/umpc/d88/debian_setup.htm
@@ -44,7 +44,7 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>iriver Dicple D88 &gt;&gt; Debian</h3>
+<h3>iriver Dicple D88 &gt;&gt; Debian 6</h3>
 <p><b>安裝系統</b></p>
 <hr size="1">
 <p>
