--- a/umpc/d88/stock_build_kernel-2.6.24.htm
+++ b/umpc/d88/stock_build_kernel-2.6.24.htm
@@ -44,7 +44,7 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>iriver Dicple D88</h3>
+<h3>iriver Dicple D88 &gt;&gt; Stock</h3>
 <p><b>build kernel 2.6.24</b></p>
 <hr size="1">
 <p>
