--- a/umpc.htm
+++ b/umpc.htm
@@ -428,19 +428,19 @@ build mkyaffs2image</a><br>
     <a href="umpc/d88/build_gmenunx.htm">
     build gmenunx</a><br>
     
+    &emsp;&emsp;&emsp;&emsp;&oplus;
+    <b>C/C++</b><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="umpc/d88/cpp_kbd.htm">
+        Keyboard</a><br>
+
 &oplus;
 <b>Debian 6</b><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="umpc/d88/debian_setup.htm">
     安裝系統</a><br>
-
-&oplus;
-<b>C/C++</b><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="umpc/d88/cpp_kbd.htm">
-    Keyboard</a><br>
 <br><br><br><br>
 
 <div id="d100"></div>
