--- a/umpc/d88/cpp_kbd.htm
+++ b/umpc/d88/cpp_kbd.htm
@@ -44,7 +44,7 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>iriver Dicple D88 &gt;&gt; C/C++</h3>
+<h3>iriver Dicple D88 &gt;&gt; RetroFW &gt;&gt; C/C++</h3>
 <p><b>Keyboard</b></p>
 <hr size="1">
 <p>
