D8 How to build uboot.

--- a/umpc.htm
+++ b/umpc.htm
@@ -251,6 +251,10 @@ UART、BOOT腳位</a><br>
 &lowast;
 <a href="umpc/d8/fix_cursor.htm">
 解決Cursor無法顯示的問題</a><br>
+
+&lowast;
+<a href="umpc/d8/build_uboot.htm">
+build uboot</a><br>
 <br><br><br><br>
 
 <div id="d88"></div>
