--- a/umpc/d88/build_uboot.htm
+++ b/umpc/d88/build_uboot.htm
@@ -66,20 +66,9 @@ $ mipsel-linux-gcc --version
     warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 
 $ cd
-$ wget https://github.com/steward-fu/archives/releases/download/d88/D88-uboot.tar.bz2
-$ tar xvf D88-uboot.tar.bz2
-$ cd uboot
-
-$ make distclean
+$ git clone https://github.com/steward-fu/bootloader -b jz4755_d88_uboot-2009.05
 $ make cetus_nand_config
-$ echo "#define IRIVER_D8_DEBUG 1" &gt; include/d8_config.h
-$ make
-
-$ make distclean
-$ make cetus_nand_config
-$ rm -rf include/d8_config.h
-$ touch include/d8_config.h
-$ make
+$ make -j4
 </pre>
 <p>
 P.S. 因為UART1連接到WM8731，除非是要使用UART Debug，不然傳入<b>console=ttyS1,57600n8</b>會造成Kernel無法啟動
