D8 How to prepare debian 6.

--- a/umpc.htm
+++ b/umpc.htm
@@ -249,12 +249,23 @@ UART、BOOT腳位</a><br>
 如何調整MTD大小</a><br>
 
 &lowast;
+<a href="umpc/d88/flash.htm">
+如何透過USBBoot刷機</a><br>
+
+&lowast;
 <a href="umpc/d8/fix_cursor.htm">
 解決Cursor無法顯示的問題</a><br>
 
 &lowast;
 <a href="umpc/d8/build_uboot.htm">
 build uboot</a><br>
+
+&oplus;
+<b>Debian 6</b><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="umpc/d8/debian6_setup.htm">
+    安裝系統</a><br>
 <br><br><br><br>
 
 <div id="d88"></div>
