D8 How to build kernel 2.6.24.

--- a/umpc.htm
+++ b/umpc.htm
@@ -266,6 +266,10 @@ build uboot</a><br>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="umpc/d8/debian6_setup.htm">
     安裝系統</a><br>
+    
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="umpc/d8/build_kernel-2.6.24.htm">
+    build kernel 2.6.24</a><br>
 <br><br><br><br>
 
 <div id="d88"></div>
