--- a/umpc.htm
+++ b/umpc.htm
@@ -268,6 +268,10 @@ build uboot</a><br>
     安裝系統</a><br>
     
     &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="umpc/d8/loadkeys.htm">
+    loadkeys</a><br>
+    
+    &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="umpc/d8/build_kernel-2.6.24.htm">
     build kernel 2.6.24</a><br>
 <br><br><br><br>
