--- a/umpc/d8/loadkeys.htm
+++ b/umpc/d8/loadkeys.htm
@@ -101,6 +101,10 @@
 <tr><td>Alt + K</td><td>}</td></tr>
 <tr><td>Alt + N</td><td>[</td></tr>
 <tr><td>Alt + M</td><td>]</td></tr>
+<tr><td>Alt + UP</td><td>PageUp</td></tr>
+<tr><td>Alt + DOWN</td><td>PageDown</td></tr>
+<tr><td>Alt + LEFT</td><td>Home</td></tr>
+<tr><td>Alt + RIGHT</td><td>End</td></tr>
 </table><br>
 
 <p>
@@ -108,423 +112,88 @@
 </p>
 <pre>
 keymaps 0-2,4-5,8,12
-keycode   1 = Escape           Escape          
-	alt	keycode   1 = Meta_Escape     
-keycode   2 = one              exclam          
-	alt	keycode   2 = Meta_one        
-keycode   3 = two              at               at               nul              nul              Meta_two        
-keycode   4 = three            numbersign      
-	control	keycode   4 = Escape          
-	alt	keycode   4 = Meta_three      
-keycode   5 = four             dollar           dollar           Control_backslash
-	alt	keycode   5 = Meta_four       
-keycode   6 = five             percent         
-	control	keycode   6 = Control_bracketright
-	alt	keycode   6 = Meta_five       
-keycode   7 = six              asciicircum     
-	control	keycode   7 = Control_asciicircum
-	alt	keycode   7 = Meta_six        
-keycode   8 = seven            ampersand        braceleft        Control_underscore
-	alt	keycode   8 = Meta_seven      
-keycode   9 = eight            asterisk         bracketleft      Delete          
-	alt	keycode   9 = Meta_eight      
-keycode  10 = nine             parenleft        bracketright    
-	alt	keycode  10 = Meta_nine       
-keycode  11 = zero             parenright       braceright      
-	alt	keycode  11 = Meta_zero       
-keycode  12 = minus            underscore       backslash        Control_underscore Control_underscore Meta_minus      
-keycode  13 = equal            plus            
-	alt	keycode  13 = Meta_equal      
-keycode  14 = Delete           Delete          
-	control	keycode  14 = BackSpace       
-	alt	keycode  14 = Meta_Delete     
-keycode  15 = Tab              Tab             
-	alt	keycode  15 = Meta_Tab        
-keycode  16 = q               
-keycode  17 = w               
-keycode  18 = +e               +E               Hex_E            Control_e        Control_e        Meta_e           Meta_Control_e  
-keycode  19 = r               
-keycode  20 = t               
-keycode  21 = y               
-keycode  22 = u               
-	alt	keycode  22 = asciitilde
-keycode  23 = i               
-	alt	keycode  23 = bar
-keycode  24 = o               
-	alt	keycode  24 = backslash
-keycode  25 = p               
-	alt	keycode  25 = plus
-keycode  26 = bracketleft      braceleft       
-	control	keycode  26 = Escape          
-	alt	keycode  26 = Meta_bracketleft
-keycode  27 = bracketright     braceright       asciitilde       Control_bracketright
-	alt	keycode  27 = Meta_bracketright
-keycode  28 = Return          
-	alt	keycode  28 = Meta_Control_m  
-keycode  29 = Control         
-keycode  30 = +a               +A               Hex_A            Control_a        Control_a        Meta_a           Meta_Control_a  
-keycode  31 = s               
-keycode  32 = +d               +D               Hex_D            Control_d        Control_d        Meta_d           Meta_Control_d  
-keycode  33 = +f               +F               Hex_F            Control_f        Control_f        Meta_f           Meta_Control_f  
-keycode  34 = g               
-keycode  35 = h               
-	alt	keycode  35 = grave
-keycode  36 = j               
-	alt	keycode  36 = braceleft
-keycode  37 = k               
-	alt	keycode  37 = braceright
-keycode  38 = l               
-	alt	keycode  38 = equal
-keycode  39 = semicolon        colon           
-	alt	keycode  39 = Meta_semicolon  
-keycode  40 = apostrophe       quotedbl        
-	control	keycode  40 = Control_g       
-	alt	keycode  40 = Meta_apostrophe 
-keycode  41 = grave            asciitilde      
-	control	keycode  41 = nul             
-	alt	keycode  41 = Meta_grave      
-keycode  42 = Shift           
-keycode  43 = backslash        bar             
-	control	keycode  43 = Control_backslash
-	alt	keycode  43 = Meta_backslash  
-keycode  44 = z               
-keycode  45 = x               
-keycode  46 = +c               +C               Hex_C            Control_c        Control_c        Meta_c           Meta_Control_c  
-keycode  47 = v               
-keycode  48 = +b               +B               Hex_B            Control_b        Control_b        Meta_b           Meta_Control_b  
-keycode  49 = n               
-	alt	keycode  49 = bracketleft   
-keycode  50 = m               
-	alt	keycode  50 = bracketright   
-keycode  51 = comma            less            
-	alt	keycode  51 = Meta_comma      
-keycode  52 = period           greater         
-	control	keycode  52 = Compose         
-	alt	keycode  52 = Meta_period     
-keycode  53 = slash            question        
-	control	keycode  53 = Delete          
-	alt	keycode  53 = Meta_slash      
-keycode  54 = Shift           
-keycode  55 = KP_Multiply     
-keycode  56 = Alt             
-keycode  57 = space            space           
-	control	keycode  57 = nul             
-	alt	keycode  57 = Meta_space      
-keycode  58 = Caps_Lock       
-keycode  59 = F1              
-	shift	keycode  59 = F11             
-	altgr	keycode  59 = Console_13      
-	shift	control	keycode  59 = VoidSymbol      
-	alt	keycode  59 = Console_1       
-	control	alt	keycode  59 = Console_1       
-keycode  60 = F2              
-	shift	keycode  60 = F12             
-	altgr	keycode  60 = Console_14      
-	shift	control	keycode  60 = VoidSymbol      
-	alt	keycode  60 = Console_2       
-	control	alt	keycode  60 = Console_2       
-keycode  61 = F3              
-	shift	keycode  61 = F13             
-	altgr	keycode  61 = Console_15      
-	shift	control	keycode  61 = VoidSymbol      
-	alt	keycode  61 = Console_3       
-	control	alt	keycode  61 = Console_3       
-keycode  62 = F4              
-	shift	keycode  62 = F14             
-	altgr	keycode  62 = Console_16      
-	shift	control	keycode  62 = VoidSymbol      
-	alt	keycode  62 = Console_4       
-	control	alt	keycode  62 = Console_4       
-keycode  63 = F5              
-	shift	keycode  63 = F15             
-	altgr	keycode  63 = Console_17      
-	shift	control	keycode  63 = VoidSymbol      
-	alt	keycode  63 = Console_5       
-	control	alt	keycode  63 = Console_5       
-keycode  64 = F6              
-	shift	keycode  64 = F16             
-	altgr	keycode  64 = Console_18      
-	shift	control	keycode  64 = VoidSymbol      
-	alt	keycode  64 = Console_6       
-	control	alt	keycode  64 = Console_6       
-keycode  65 = F7              
-	shift	keycode  65 = F17             
-	altgr	keycode  65 = Console_19      
-	shift	control	keycode  65 = VoidSymbol      
-	alt	keycode  65 = Console_7       
-	control	alt	keycode  65 = Console_7       
-keycode  66 = F8              
-	shift	keycode  66 = F18             
-	altgr	keycode  66 = Console_20      
-	shift	control	keycode  66 = VoidSymbol      
-	alt	keycode  66 = Console_8       
-	control	alt	keycode  66 = Console_8       
-keycode  67 = F9              
-	shift	keycode  67 = F19             
-	altgr	keycode  67 = Console_21      
-	shift	control	keycode  67 = VoidSymbol      
-	alt	keycode  67 = Console_9       
-	control	alt	keycode  67 = Console_9       
-keycode  68 = F10             
-	shift	keycode  68 = F20             
-	altgr	keycode  68 = Console_22      
-	shift	control	keycode  68 = VoidSymbol      
-	alt	keycode  68 = Console_10      
-	control	alt	keycode  68 = Console_10      
-keycode  69 = Num_Lock        
-	shift	keycode  69 = Bare_Num_Lock   
-keycode  70 = Scroll_Lock      Show_Memory      Show_Registers   Show_State      
-	alt	keycode  70 = Scroll_Lock     
-keycode  71 = KP_7            
-	altgr	keycode  71 = Hex_7           
-	alt	keycode  71 = Ascii_7         
-keycode  72 = KP_8            
-	altgr	keycode  72 = Hex_8           
-	alt	keycode  72 = Ascii_8         
-keycode  73 = KP_9            
-	altgr	keycode  73 = Hex_9           
-	alt	keycode  73 = Ascii_9         
-keycode  74 = KP_Subtract     
-keycode  75 = KP_4            
-	altgr	keycode  75 = Hex_4           
-	alt	keycode  75 = Ascii_4         
-keycode  76 = KP_5            
-	altgr	keycode  76 = Hex_5           
-	alt	keycode  76 = Ascii_5         
-keycode  77 = KP_6            
-	altgr	keycode  77 = Hex_6           
-	alt	keycode  77 = Ascii_6         
-keycode  78 = KP_Add          
-keycode  79 = KP_1            
-	altgr	keycode  79 = Hex_1           
-	alt	keycode  79 = Ascii_1         
-keycode  80 = KP_2            
-	altgr	keycode  80 = Hex_2           
-	alt	keycode  80 = Ascii_2         
-keycode  81 = KP_3            
-	altgr	keycode  81 = Hex_3           
-	alt	keycode  81 = Ascii_3         
-keycode  82 = KP_0            
-	altgr	keycode  82 = Hex_0           
-	alt	keycode  82 = Ascii_0         
-keycode  83 = KP_Period       
-	control	alt	keycode  83 = Boot            
-keycode  84 = Last_Console    
-keycode  85 =
-keycode  86 = less             greater          bar             
-	alt	keycode  86 = Meta_less       
-keycode  87 = F11             
-	altgr	keycode  87 = Console_23      
-	shift	control	keycode  87 = VoidSymbol      
-	alt	keycode  87 = Console_11      
-	control	alt	keycode  87 = Console_11      
-keycode  88 = F12             
-	altgr	keycode  88 = Console_24      
-	shift	control	keycode  88 = VoidSymbol      
-	alt	keycode  88 = Console_12      
-	control	alt	keycode  88 = Console_12      
-keycode  89 =
-keycode  90 =
-keycode  91 =
-keycode  92 =
-keycode  93 =
-keycode  94 =
-keycode  95 =
-keycode  96 = KP_Enter        
-keycode  97 = Control         
-keycode  98 = KP_Divide       
-keycode  99 = Control_backslash
-	control	keycode  99 = Control_backslash
-	alt	keycode  99 = Control_backslash
+keycode 1 = Escape
+keycode 2 = one exclam
+keycode 3 = two at
+keycode 4 = three numbersign
+keycode 5 = four dollar
+keycode 6 = five percent
+keycode 7 = six asciicircum
+keycode 8 = seven ampersand
+keycode 9 = eight asterisk
+keycode 10 = nine parenleft
+keycode 11 = zero parenright
+keycode 12 = minus underscore
+keycode 13 = equal plus
+keycode 14 = Delete
+keycode 15 = Tab
+keycode 16 = q
+keycode 17 = w
+keycode 18 = e
+keycode 19 = r
+keycode 20 = t
+keycode 21 = y
+keycode 22 = u
+  alt keycode  22 = asciitilde
+keycode 23 = i
+  alt keycode  23 = bar
+keycode 24 = o
+  alt keycode  24 = backslash
+keycode 25 = p
+  alt keycode  25 = plus
+keycode 26 = bracketleft
+keycode 27 = bracketright
+keycode 28 = Return
+keycode 29 = Control
+keycode 30 = a
+keycode 31 = s
+keycode 32 = d
+keycode 33 = f
+keycode 34 = g
+keycode 35 = h
+  alt keycode 35 = grave
+keycode 36 = j
+  alt keycode 36 = braceleft
+keycode 37 = k
+  alt keycode 37 = braceright
+keycode 38 = l
+  alt keycode 38 = equal
+keycode 39 = semicolon colon
+keycode 40 = apostrophe quotedbl
+keycode 41 = grave asciitilde
+keycode 42 = Shift
+keycode 43 = backslash bar
+keycode 44 = z
+keycode 45 = x
+keycode 46 = c
+keycode 47 = v
+keycode 48 = b
+keycode 49 = n
+  alt keycode 49 = bracketleft
+keycode 50 = m
+  alt keycode 50 = bracketright
+keycode 51 = comma less
+keycode 52 = period greater
+keycode 53 = slash question
+keycode 54 = Shift
+keycode 56 = Alt
+keycode 57 = space
+keycode 58 = Caps_Lock
+keycode 86 = less greater
+keycode 97 = Control         
 keycode 100 = AltGr           
 keycode 101 = Break           
 keycode 102 = Find            
 keycode 103 = Up              
+  alt keycode 103 = PageUp
 keycode 104 = Prior           
-	shift	keycode 104 = Scroll_Backward 
 keycode 105 = Left            
-	alt	keycode 105 = Decr_Console    
+  alt keycode 105 = Home
 keycode 106 = Right           
-	alt	keycode 106 = Incr_Console    
+  alt keycode 106 = End
 keycode 107 = Select          
 keycode 108 = Down            
-keycode 109 = Next            
-	shift	keycode 109 = Scroll_Forward  
-keycode 110 = Insert          
-keycode 111 = Remove          
-	control	alt	keycode 111 = Boot            
-keycode 112 = Macro           
-keycode 113 = F13             
-keycode 114 = F14             
-keycode 115 = Help            
-keycode 116 = Do              
-keycode 117 = F17             
-keycode 118 = KP_MinPlus      
-keycode 119 = Pause           
-keycode 120 =
-keycode 121 =
-keycode 122 =
-keycode 123 =
-keycode 124 =
-keycode 125 =
-keycode 126 =
-keycode 127 =
-keycode 128 = nul             
-keycode 129 = nul             
-keycode 130 = nul             
-keycode 131 = nul             
-keycode 132 = nul             
-keycode 133 = nul             
-keycode 134 = nul             
-keycode 135 = nul             
-keycode 136 = nul             
-keycode 137 = nul             
-keycode 138 = nul             
-keycode 139 = nul             
-keycode 140 = nul             
-keycode 141 = nul             
-keycode 142 = nul             
-keycode 143 = nul             
-keycode 144 = nul             
-keycode 145 = nul             
-keycode 146 = nul             
-keycode 147 = nul             
-keycode 148 = nul             
-keycode 149 = nul             
-keycode 150 = nul             
-keycode 151 = nul             
-keycode 152 = nul             
-keycode 153 = nul             
-keycode 154 = nul             
-keycode 155 = nul             
-keycode 156 = nul             
-keycode 157 = nul             
-keycode 158 = nul             
-keycode 159 = nul             
-keycode 160 = nul             
-keycode 161 = nul             
-keycode 162 = nul             
-keycode 163 = nul             
-keycode 164 = nul             
-keycode 165 = nul             
-keycode 166 = nul             
-keycode 167 = nul             
-keycode 168 = nul             
-keycode 169 = nul             
-keycode 170 = nul             
-keycode 171 = nul             
-keycode 172 = nul             
-keycode 173 = nul             
-keycode 174 = nul             
-keycode 175 = nul             
-keycode 176 = nul             
-keycode 177 = nul             
-keycode 178 = nul             
-keycode 179 = nul             
-keycode 180 = nul             
-keycode 181 = nul             
-keycode 182 = nul             
-keycode 183 = nul             
-keycode 184 = nul             
-keycode 185 = nul             
-keycode 186 = nul             
-keycode 187 = nul             
-keycode 188 = nul             
-keycode 189 = nul             
-keycode 190 = nul             
-keycode 191 = nul             
-keycode 192 = nul             
-keycode 193 = nul             
-keycode 194 = nul             
-keycode 195 = nul             
-keycode 196 = nul             
-keycode 197 = nul             
-keycode 198 = nul             
-keycode 199 = nul             
-keycode 200 = nul             
-keycode 201 = nul             
-keycode 202 = nul             
-keycode 203 = nul             
-keycode 204 = nul             
-keycode 205 = nul             
-keycode 206 = nul             
-keycode 207 = nul             
-keycode 208 = nul             
-keycode 209 = nul             
-keycode 210 = nul             
-keycode 211 = nul             
-keycode 212 = nul             
-keycode 213 = nul             
-keycode 214 = nul             
-keycode 215 = nul             
-keycode 216 = nul             
-keycode 217 = nul             
-keycode 218 = nul             
-keycode 219 = nul             
-keycode 220 = nul             
-keycode 221 = nul             
-keycode 222 = nul             
-keycode 223 = nul             
-keycode 224 = nul             
-keycode 225 = nul             
-keycode 226 = nul             
-keycode 227 = nul             
-keycode 228 = nul             
-keycode 229 = nul             
-keycode 230 = nul             
-keycode 231 = nul             
-keycode 232 = nul             
-keycode 233 = nul             
-keycode 234 = nul             
-keycode 235 = nul             
-keycode 236 = nul             
-keycode 237 = nul             
-keycode 238 = nul             
-keycode 239 = nul             
-keycode 240 = nul             
-keycode 241 = nul             
-keycode 242 = nul             
-keycode 243 = nul             
-keycode 244 = nul             
-keycode 245 = nul             
-keycode 246 = nul             
-keycode 247 = nul             
-keycode 248 = nul             
-keycode 249 = nul             
-keycode 250 = nul             
-keycode 251 = nul             
-keycode 252 = nul             
-keycode 253 = nul             
-keycode 254 = nul             
-keycode 255 = nul             
-string F1 = "\033[[A"
-string F2 = "\033[[B"
-string F3 = "\033[[C"
-string F4 = "\033[[D"
-string F5 = "\033[[E"
-string F6 = "\033[17~"
-string F7 = "\033[18~"
-string F8 = "\033[19~"
-string F9 = "\033[20~"
-string F10 = "\033[21~"
-string F11 = "\033[23~"
-string F12 = "\033[24~"
-string F13 = "\033[25~"
-string F14 = "\033[26~"
-string F15 = "\033[28~"
-string F16 = "\033[29~"
-string F17 = "\033[31~"
-string F18 = "\033[32~"
-string F19 = "\033[33~"
-string F20 = "\033[34~"
-string Find = "\033[1~"
-string Insert = "\033[2~"
-string Remove = "\033[3~"
-string Select = "\033[4~"
-string Prior = "\033[5~"
-string Next = "\033[6~"
-string Macro = "\033[M"
-string Pause = "\033[P"
+  alt keycode 108 = PageDown
 </pre>
 <p>
 P.S. <b>loadkeys /etc/d8.map</b>
