D8 How to enable double buffer for fb0.

--- a/umpc.htm
+++ b/umpc.htm
@@ -257,6 +257,10 @@ UART、BOOT腳位</a><br>
 解決Cursor無法顯示的問題</a><br>
 
 &lowast;
+<a href="umpc/d8/doublebuf.htm">
+如何開啟fb0 double buffer</a><br>
+
+&lowast;
 <a href="umpc/d8/build_uboot.htm">
 build uboot</a><br>
 
