--- a/umpc.htm
+++ b/umpc.htm
@@ -338,6 +338,10 @@ RTC取得、設定</a><br>
 如何關閉背光</a><br>
 
 &lowast;
+<a href="umpc/d88/set_vol.htm">
+如何調整音量</a><br>
+
+&lowast;
 <a href="umpc/d88/get_batt.htm">
 如何取得電池的狀態</a><br>
 
