--- a/umpc/d8/loadkeys.htm
+++ b/umpc/d8/loadkeys.htm
@@ -62,9 +62,9 @@
 <tr><td>英英</td><td>5</td></tr>
 <tr><td>日漢</td><td>6</td></tr>
 <tr><td>整句翻譯</td><td>7</td></tr>
-<tr><td>MP3-FM</td><td>*</td></tr>
-<tr><td>Pg Up</td><td>8</td></tr>
-<tr><td>Pg Dn</td><td>9</td></tr>
+<tr><td>MP3-FM</td><td>8</td></tr>
+<tr><td>Pg Up</td><td>9</td></tr>
+<tr><td>Pg Dn</td><td>0</td></tr>
 <tr><td>Shift + 目錄</td><td>!</td></tr>
 <tr><td>Shift + 多詞典查詢</td><td>@</td></tr>
 <tr><td>Shift + 漢語</td><td>#</td></tr>
@@ -77,30 +77,32 @@
 <tr><td>Shift + Pg Dn</td><td>)</td></tr>
 <tr><td>...</td><td>Tab</td></tr>
 <tr><td>NUM</td><td>CapsLock</td></tr>
-<tr><td>跳查</td><td>/</td></tr>
-<tr><td>Shift + 跳查</td><td>?</td></tr>
+<tr><td>跳查</td><td>;</td></tr>
+<tr><td>Shift + 跳查</td><td>:</td></tr>
 <tr><td>發音設置</td><td>Left Ctrl</td></tr>
 <tr><td>例/解</td><td>Left Alt</td></tr>
-<tr><td>添加</td><td>;</td></tr>
-<tr><td>Shift + 添加</td><td>:</td></tr>
-<tr><td>單詞複習</td><td>'</td></tr>
-<tr><td>Shift + 單詞複習</td><td>"</td></tr>
-<tr><td>格式變換</td><td>-</td></tr>
-<tr><td>Shift + 格式變換</td><td>_</td></tr>
-<tr><td>輸入法</td><td>,</td></tr>
-<tr><td>Shift + 輸入法</td><td>&lt;</td></tr>
-<tr><td>速查</td><td>.</td></tr>
-<tr><td>Shift + 速查</td><td>&gt;</td></tr>
-<tr><td>Alt + U</td><td>~</td></tr>
-<tr><td>Alt + H</td><td>`</td></tr>
-<tr><td>Alt + I</td><td>|</td></tr>
-<tr><td>Alt + O</td><td>\</td></tr>
-<tr><td>Alt + P</td><td>+</td></tr>
-<tr><td>Alt + L</td><td>=</td></tr>
-<tr><td>Alt + J</td><td>{</td></tr>
-<tr><td>Alt + K</td><td>}</td></tr>
-<tr><td>Alt + N</td><td>[</td></tr>
-<tr><td>Alt + M</td><td>]</td></tr>
+<tr><td>添加</td><td>'</td></tr>
+<tr><td>Shift + 添加</td><td>"</td></tr>
+<tr><td>單詞複習</td><td>-</td></tr>
+<tr><td>Shift + 單詞複習</td><td>_</td></tr>
+<tr><td>格式變換</td><td>,</td></tr>
+<tr><td>Shift + 格式變換</td><td>&lt;</td></tr>
+<tr><td>輸入法</td><td>.</td></tr>
+<tr><td>Shift + 輸入法</td><td>&gt;</td></tr>
+<tr><td>速查</td><td>/</td></tr>
+<tr><td>Shift + 速查</td><td>?</td></tr>
+<tr><td>Alt + 英英</td><td>~</td></tr>
+<tr><td>Alt + 日漢</td><td>`</td></tr>
+<tr><td>Alt + 整句翻譯</td><td>|</td></tr>
+<tr><td>Alt + MP3-FM</td><td>\</td></tr>
+<tr><td>Alt + Pg Up</td><td>+</td></tr>
+<tr><td>Alt + Pg Dn</td><td>=</td></tr>
+<tr><td>Alt + I</td><td>{</td></tr>
+<tr><td>Alt + O</td><td>}</td></tr>
+<tr><td>Alt + K</td><td>[</td></tr>
+<tr><td>Alt + L</td><td>]</td></tr>
+<tr><td>Alt + N</td><td>&lt;</td></tr>
+<tr><td>Alt + M</td><td>&gt;</td></tr>
 <tr><td>Alt + UP</td><td>PageUp</td></tr>
 <tr><td>Alt + DOWN</td><td>PageDown</td></tr>
 <tr><td>Alt + LEFT</td><td>Home</td></tr>
@@ -118,11 +120,17 @@ keycode 3 = two at
 keycode 4 = three numbersign
 keycode 5 = four dollar
 keycode 6 = five percent
+  alt keycode 6 = asciitilde
 keycode 7 = six asciicircum
+  alt keycode 7 = grave
 keycode 8 = seven ampersand
+  alt keycode 8 = bar
 keycode 9 = eight asterisk
+  alt keycode 9 = backslash
 keycode 10 = nine parenleft
+  alt keycode 10 = plus
 keycode 11 = zero parenright
+  alt keycode 11 = equal
 keycode 12 = minus underscore
 keycode 13 = equal plus
 keycode 14 = Delete
@@ -134,13 +142,11 @@ keycode 19 = r
 keycode 20 = t
 keycode 21 = y
 keycode 22 = u
-  alt keycode  22 = asciitilde
 keycode 23 = i
-  alt keycode  23 = bar
+  alt keycode 23 = braceleft
 keycode 24 = o
-  alt keycode  24 = backslash
+  alt keycode 24 = braceright
 keycode 25 = p
-  alt keycode  25 = plus
 keycode 26 = bracketleft
 keycode 27 = bracketright
 keycode 28 = Return
@@ -151,13 +157,11 @@ keycode 32 = d
 keycode 33 = f
 keycode 34 = g
 keycode 35 = h
-  alt keycode 35 = grave
 keycode 36 = j
-  alt keycode 36 = braceleft
+  alt keycode 36 = bracketleft
 keycode 37 = k
-  alt keycode 37 = braceright
+  alt keycode 37 = bracketright
 keycode 38 = l
-  alt keycode 38 = equal
 keycode 39 = semicolon colon
 keycode 40 = apostrophe quotedbl
 keycode 41 = grave asciitilde
@@ -169,9 +173,9 @@ keycode 46 = c
 keycode 47 = v
 keycode 48 = b
 keycode 49 = n
-  alt keycode 49 = bracketleft
+  alt keycode 49 = less
 keycode 50 = m
-  alt keycode 50 = bracketright
+  alt keycode 50 = greater
 keycode 51 = comma less
 keycode 52 = period greater
 keycode 53 = slash question
@@ -182,18 +186,14 @@ keycode 58 = Caps_Lock
 keycode 86 = less greater
 keycode 97 = Control         
 keycode 100 = AltGr           
-keycode 101 = Break           
-keycode 102 = Find            
 keycode 103 = Up              
   alt keycode 103 = PageUp
-keycode 104 = Prior           
+keycode 108 = Down            
+  alt keycode 108 = PageDown
 keycode 105 = Left            
   alt keycode 105 = Home
 keycode 106 = Right           
   alt keycode 106 = End
-keycode 107 = Select          
-keycode 108 = Down            
-  alt keycode 108 = PageDown
 </pre>
 <p>
 P.S. <b>loadkeys /etc/d8.map</b>
