--- a/umpc.htm
+++ b/umpc.htm
@@ -245,8 +245,24 @@ iriver Dicple D8</h3>
 UART、BOOT腳位</a><br>
 
 &lowast;
+<a href="umpc/d88/set_bl.htm">
+如何設定背光</a><br>
+
+&lowast;
+<a href="umpc/d88/set_bl0.htm">
+如何關閉背光</a><br>
+
+&lowast;
+<a href="umpc/d88/set_vol.htm">
+如何調整音量</a><br>
+
+&lowast;
 <a href="umpc/d8/mtd_size.htm">
 如何調整MTD大小</a><br>
+
+&lowast;
+<a href="umpc/d88/get_batt.htm">
+如何取得電池的狀態</a><br>
 
 &lowast;
 <a href="umpc/d88/flash.htm">
