D88 Added backlight pins.

--- a/umpc.htm
+++ b/umpc.htm
@@ -318,6 +318,10 @@ iriver Dicple D88</h3>
 鍵盤腳位</a><br>
 
 &lowast;
+<a href="umpc/d88/bl.htm">
+背光腳位</a><br>
+
+&lowast;
 <a href="umpc/d88/battery.htm">
 更換電池(1500mA)</a><br>
 
