VirtualBox How to find client IP.

--- a/system.htm
+++ b/system.htm
@@ -222,10 +222,6 @@ artistic style推薦參數</a><br>
 shell script "$、{}、%、#"用途</a><br>
 
 &lowast;
-<a href="system/debian/vboxnet0.htm">
-VirtualBox產生vboxnet0 192.168.56.1</a><br>
-
-&lowast;
 <a href="system/debian/txt2jpg.htm">
 如何把文字轉成圖片</a><br>
 
@@ -256,10 +252,6 @@ VirtualBox產生vboxnet0 192.168.56.1</a><br>
 &lowast;
 <a href="system/debian/deactive_cursor.htm">
 如何關閉開機顯示的命令列Cursor</a><br>
-
-&lowast;
-<a href="system/debian/vbox_find_ip.htm">
-如何在VirtualBox找出Client IP</a><br>
 
 &lowast;
 <a href="system/debian/vim_ctrl_s.htm">
@@ -398,6 +390,16 @@ VirtualBox產生vboxnet0 192.168.56.1</a><br>
         &emsp;&emsp;&emsp;&emsp;&lowast;
         <a href="system/debian/fix_perf13.htm">
         解決"perf_event_open(..., PERF_FLAG_FD_CLOEXEC) failed with unexpected error 13"問題</a><br>
+
+&oplus;
+<b>VirtualBox</b><br>
+        &emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="system/debian/vbox_find_ip.htm">
+        如何找出Client IP</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="system/debian/vbox_net0.htm">
+        如何產生vboxnet0 192.168.56.1</a><br>
 <br><br><br><br>
 
 <div id="centos"></div>
