--- a/system/debian/vbox_find_ip.htm
+++ b/system/debian/vbox_find_ip.htm
@@ -44,14 +44,15 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>Debian</h3>
-<p><b>如何在VirtualBox找出Client IP</b></p>
+<h3>Debian &gt;&gt; VirtualBox</h3>
+<p><b>如何找出Client IP</b></p>
 <hr size="1">
 <p>
 參考資料：<br>
-1. <a href="https://stackoverflow.com/questions/62530575/vboxmanage-cant-get-vm-ip-address">vboxmanage-cant-get-vm-ip-address</a><br><br>
+1. <a href="https://stackoverflow.com/questions/62530575/vboxmanage-cant-get-vm-ip-address">vboxmanage-cant-get-vm-ip-address</a><br>
+2. <a href="https://superuser.com/questions/634195/how-to-get-ip-address-assigned-to-vm-running-in-background">how-to-get-ip-address-assigned-to-vm-running-in-background</a><br><br>
 
-步驟如下：
+沒有安裝VirtualBox Extension Pack時
 </p>
 <pre>
 $ VBoxManage list hostonlyifs
@@ -72,8 +73,19 @@ $ VBoxManage showvminfo ubuntu-20.04_x64 | grep "Host-only"
     NIC 2: MAC: 080027B85F8A, Attachment: Host-only Interface 'vboxnet0', Cable connected: on, Trace: off (file: none), Type: 82540EM, Reported speed: 0 Mbps, Boot priority: 0, Promisc Policy: deny, Bandwidth group: none
 
 $ arp -a | grep vboxnet0
-? (192.168.56.100) at 08:00:27:52:5e:ae [ether] on vboxnet0
-? (192.168.56.101) at 08:00:27:b8:5f:8a [ether] on vboxnet0
+    ? (192.168.56.100) at 08:00:27:52:5e:ae [ether] on vboxnet0
+    ? (192.168.56.101) at 08:00:27:b8:5f:8a [ether] on vboxnet0
+</pre>
+<p>
+P.S. 缺點就是需要先ping通才會有arp table<br><br>
+
+
+安裝VirtualBox Extension Pack時
+</p>
+<pre>
+$ vboxmanage guestproperty enumerate virus_debug_win7x86 | grep IP
+    Name: /VirtualBox/GuestInfo/Net/0/V4/IP, value: 10.0.2.15, timestamp: 1691981523267435000, flags:
+    Name: /VirtualBox/GuestInfo/Net/1/V4/IP, value: 192.168.56.102, timestamp: 1691981528336005000, flags:
 </pre><br>
 
 <p>
