--- a/system/debian/vbox_net0.htm
+++ b/system/debian/vbox_net0.htm
@@ -44,8 +44,8 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>Debian</h3>
-<p><b>VirtualBox產生vboxnet0 192.168.56.1</b></p>
+<h3>Debian &gt;&gt; VirtualBox</h3>
+<p><b>如何產生vboxnet0 192.168.56.1</b></p>
 <hr size="1">
 <p>
 步驟如下：
