--- a/system.htm
+++ b/system.htm
@@ -102,10 +102,6 @@ Debian</h3>
 中文字型</a><br>
 
 &lowast;
-<a href="system/debian/file_attribute.htm">
-檔案屬性</a><br>
-
-&lowast;
 <a href="system/debian/pdf2jpg.htm">
 PDF轉JPG</a><br>
 
@@ -122,28 +118,8 @@ SSH Tunnel</a><br>
 SSH Tunnel(rsync)</a><br>
 
 &lowast;
-<a href="system/debian/mount_cifs.htm">
-掛載cifs檔案</a><br>
-
-&lowast;
-<a href="system/debian/mount_ubifs.htm">
-掛載ubifs檔案</a><br>
-
-&lowast;
-<a href="system/debian/yaffs2.htm">
-製作yaffs2檔案</a><br>
-
-&lowast;
 <a href="system/debian/clang-format.htm">
 clang-format</a><br>
-
-&lowast;
-<a href="system/debian/rename.htm">
-將檔名都轉成小寫</a><br>
-
-&lowast;
-<a href="system/debian/detox.htm">
-移除空白字元檔名</a><br>
 
 &lowast;
 <a href="system/debian/wait_pid_start.htm">
@@ -400,6 +376,32 @@ shell script "$、{}、%、#"用途</a><br>
         &emsp;&emsp;&emsp;&emsp;&lowast;
         <a href="system/debian/vbox_net0.htm">
         如何產生vboxnet0 192.168.56.1</a><br>
+
+&oplus;
+<b>File System</b><br>
+        &emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="system/debian/file_attribute.htm">
+        如何修改檔案屬性</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="system/debian/mount_cifs.htm">
+        如何掛載cifs檔案</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="system/debian/mount_ubifs.htm">
+        如何掛載ubifs檔案</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="system/debian/yaffs2.htm">
+        如何製作yaffs2檔案</a><br>
+        
+        &emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="system/debian/rename.htm">
+        如何將檔名轉成小寫</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="system/debian/detox.htm">
+        如何移除空白字元檔名</a><br>
 <br><br><br><br>
 
 <div id="centos"></div>
