--- a/system/debian/detox.htm
+++ b/system/debian/detox.htm
@@ -44,8 +44,8 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>Debian</h3>
-<p><b>移除空白字元檔名</b></p>
+<h3>Debian &gt;&gt; File System</h3>
+<p><b>如何移除空白字元檔名</b></p>
 <hr size="1">
 <p>
 步驟如下：
