--- a/system/debian/file_attribute.htm
+++ b/system/debian/file_attribute.htm
@@ -44,8 +44,8 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>Debian</h3>
-<p><b>檔案屬性</b></p>
+<h3>Debian &gt;&gt; File System</h3>
+<p><b>如何修改檔案屬性</b></p>
 <hr size="1">
 <p>
 參考資訊：<br>
