--- a/system/debian/mount_ubifs.htm
+++ b/system/debian/mount_ubifs.htm
@@ -44,8 +44,8 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>Debian</h3>
-<p><b>掛載ubifs檔案</b></p>
+<h3>Debian &gt;&gt; File System</h3>
+<p><b>如何掛載ubifs檔案</b></p>
 <hr size="1">
 <p>
 mount ubifs(xxx.img)
