--- a/system/debian/rename.htm
+++ b/system/debian/rename.htm
@@ -44,8 +44,8 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>Debian</h3>
-<p><b>將檔名都轉成小寫</b></p>
+<h3>Debian &gt;&gt; </h3>
+<p><b>如何將檔名轉成小寫</b></p>
 <hr size="1">
 <p>
 如下：
