--- a/system/debian/yaffs2.htm
+++ b/system/debian/yaffs2.htm
@@ -44,8 +44,8 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>Debian</h3>
-<p><b>製作yaffs2檔案</b></p>
+<h3>Debian &gt;&gt; File System</h3>
+<p><b>如何製作yaffs2檔案</b></p>
 <hr size="1">
 <p>
 參考資料：<br>
