--- a/system/debian/cpio.htm
+++ b/system/debian/cpio.htm
@@ -44,8 +44,8 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>Debian</h3>
-<p><b>CPIO壓縮、解壓縮</b></p>
+<h3>Debian &gt;&gt; Kernel</h3>
+<p><b>extract、repack cpio</b></p>
 <hr size="1">
 <p>
 解壓縮：
@@ -58,7 +58,7 @@ $ zcat ../ramdisk.gz | cpio -idvm
 壓縮：
 </p>
 <pre>
-$ find . | cpio -o -H newc | gzip -9 > ../ramdisk.gz
+$ find . | cpio -o -H newc | gzip -9 &gt; ../ramdisk.gz
 </pre><br>
 
 <p>
