--- a/system/debian/decompiler_dtb.htm
+++ b/system/debian/decompiler_dtb.htm
@@ -44,8 +44,8 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>Debian</h3>
-<p><b>Decompiler DTB</b></p>
+<h3>Debian &gt;&gt; Kernel</h3>
+<p><b>decompiler dtb</b></p>
 <hr size="1">
 <p>
 參考資訊：<br>
