--- a/system/debian/reverse_vmlinuz.bin.htm
+++ b/system/debian/reverse_vmlinuz.bin.htm
@@ -44,8 +44,8 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>Debian</h3>
-<p><b>Extract vmlinuz.bin</b></p>
+<h3>Debian &gt;&gt; Kernel</h3>
+<p><b>extract vmlinuz.bin</b></p>
 <hr size="1">
 <p>
 拆解後的Body才可以拿來逆向分析，而載入的起始位址可以從<b>/proc/iomem</b>得知，Symbols則可以從<b>/proc/kallsyms</b>拿到：
@@ -70,7 +70,7 @@ $ dd if=vmlinuz.bin of=body bs=1 skip=14384
 $ file body
  body: gzip compressed data, max compression, from Unix
 
-$ zcat body > body_ext
+$ zcat body &gt; body_ext
 $ file body_ext 
   body_ext: data
 
@@ -91,7 +91,7 @@ P.S. od計算出來的'1f 8b 08'需要加上偏移位置，這個範例剛好是
 </p>
 <pre>
 $ gzip -9 -n body_ext
-$ cat head body_ext.gz > vmlinuz_new.bin
+$ cat head body_ext.gz &gt; vmlinuz_new.bin
 </pre><br>
 
 <p>
