--- a/system/debian/gdb-multiarch.htm
+++ b/system/debian/gdb-multiarch.htm
@@ -44,7 +44,7 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>Debian</h3>
+<h3>Debian &gt;&gt; ARM</h3>
 <p><b>arm-none-eabi-gdb</b></p>
 <hr size="1">
 <p>
