--- a/system/debian/gdb_core_dump.htm
+++ b/system/debian/gdb_core_dump.htm
@@ -44,8 +44,8 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>Debian</h3>
-<p><b>GBD + Core Dump</b></p>
+<h3>Debian &gt;&gt; Kernel</h3>
+<p><b>core dump</b></p>
 <hr size="1">
 <p>
 如下：
