--- a/system/debian/png2ppm.htm
+++ b/system/debian/png2ppm.htm
@@ -44,8 +44,8 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>Debian</h3>
-<p><b>png轉成ascii 224 ppm</b></p>
+<h3>Debian &gt;&gt; Kernel</h3>
+<p><b>png to ascii 224 ppm</b></p>
 <hr size="1">
 <p>
 參考資訊：<br>
