--- a/system/debian/reverse_zimage.htm
+++ b/system/debian/reverse_zimage.htm
@@ -44,8 +44,8 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>Debian</h3>
-<p><b>Extract zImage</b></p>
+<h3>Debian &gt;&gt; Kernel</h3>
+<p><b>extract zImage</b></p>
 <hr size="1">
 <p>
 拆解後的Body才可以拿來逆向分析，而載入的起始位址可以從<b>/proc/iomem</b>得知，Symbols則可以從<b>/proc/kallsyms</b>拿到：
