--- a/system.htm
+++ b/system.htm
@@ -122,10 +122,6 @@ clang-format</a><br>
 等待Process出現</a><br>
 
 &lowast;
-<a href="system/debian/resize_vdi.htm">
-Resize VDI file</a><br>
-
-&lowast;
 <a href="system/debian/uefi_usbdisk.htm">
 製作UEFI USB開機碟</a><br>
 
@@ -372,6 +368,10 @@ shell script "$、{}、%、#"用途</a><br>
 
 &oplus;
 <b>VirtualBox</b><br>
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="system/debian/resize_vdi.htm">
+    resize VDI file</a><br>
+
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="system/debian/vbox_find_ip.htm">
     如何找出Client IP</a><br>
