--- a/system/debian/resize_vdi.htm
+++ b/system/debian/resize_vdi.htm
@@ -44,8 +44,8 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>Debian</h3>
-<p><b>Resize VDI file</b></p>
+<h3>Debian &gt;&gt; VirtualBox</h3>
+<p><b>resize VDI file</b></p>
 <hr size="1">
 <p>
 參考資訊：<br>
@@ -59,9 +59,11 @@ $ VBoxManage modifyhd xxx.vdi --resize 100000
 <p>
 P.S. 100GB<br><br>
 
-步驟2：<br>
-如果是Windows：Computer Management &gt; Storage &gt; Disk Management &gt; Extend Volume...
+步驟2(如果是Windows)：
 </p>
+<pre>
+Computer Management &gt; Storage &gt; Disk Management &gt; Extend Volume...
+</pre><br>
 
 <p>
 <br><a href="../../system.htm">返回上一頁</a>
