--- a/umpc/d88/debian6_setup.htm
+++ b/umpc/d88/debian6_setup.htm
@@ -51,7 +51,8 @@
 參考資料：<br>
 1. <a href="https://github.com/steward-fu/archives/releases?q=d88&expanded=true">github</a><br><br>
 
-步驟如下：
+步驟如下：<br>
+1. 建制Debian系統
 </p>
 <pre>
 $ wget https://ftp-master.debian.org/keys/release-6.asc -qO- | gpg --import --no-default-keyring --keyring ./debian-release-6.gpg
@@ -65,18 +66,28 @@ $ sudo mount -o bind /proc squeeze/proc
 $ sudo chroot squeeze
 # passwd
 # adduser user
-# nano /etc/apt/sources.list
+# vim /etc/apt/sources.list
     deb http://archive.debian.org/debian squeeze main contrib non-free
 
 # apt-get update
-# apt-get install lxde obconf openbox lxde-common xbindkeys xdotool vim sudo locales
+# apt-get install vim sudo locales
+# dpkg-reconfigure locales
 
-# nano /etc/inittab
-    #T0:23:respawn:/sbin/getty -L ttyS0 9600 vt100
-    T1:23:respawn:/sbin/getty -L ttyS1 57600 vt100
-
-# nano /etc/fstab
+# vim /etc/fstab
     /swap.img none  swap  sw  0  0
+
+# cd /dev
+# wget https://github.com/steward-fu/archives/releases/download/d8/devnode.tar.gz
+# tar xvf devnode.tar.gz
+# rm devnode.tar.gz
+
+# vim /etc/init.d/udev
+    #!/bin/sh -e
+    exit 0
+
+# vim /etc/init.d/udev-mtab
+    #!/bin/sh -e
+    exit 0
 
 # dd if=/dev/zero of=/swap.img bs=1M count=512
 # mkswap /swap.img
@@ -86,6 +97,15 @@ $ sudo umount squeeze/dev
 $ sudo umount squeeze/sys
 $ sudo umount squeeze/proc
 </pre>
+<p>
+2. 進入刷機模式<br>
+3. 刷入<a href="https://github.com/steward-fu/archives/releases/download/d88/debian6_flash.zip">debian6_flash.zip</a><br>
+4. 準備一張MicroSD(如：SanDISK 16GB)，格式成如下分區<br>
+<img src="debian6_setup/1.jpg" class="maxSize"><br><br>
+
+5. 完成<br>
+<img src="debian6_setup/2.jpg" class="maxSize">
+</p>
 
 <p>
 <br><a href="../../umpc.htm">返回上一頁</a>
