--- a/umpc.htm
+++ b/umpc.htm
@@ -490,7 +490,7 @@ build mkyaffs2image</a><br>
 <b>Debian 6</b><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="umpc/d88/debian_setup.htm">
+    <a href="umpc/d88/debian6_setup.htm">
     安裝系統</a><br>
 <br><br><br><br>
 
