--- a/program.htm
+++ b/program.htm
@@ -2407,18 +2407,18 @@ Java</h3>
 <hr size="1"><br><br><br><br><br>
 
 &oplus;
-<b>Script</b><br>
+<b>JavaScript</b><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="program/java/js_write_text.htm">
-    write text file</a><br>
+    Write text file</a><br>
 
 &oplus;
-<b>Applet</b><br>
+<b>Java Applet</b><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="program/java/applet_hello.htm">
-    hello, world!</a><br>
+    Hello, world!</a><br>
 <br><br><br><br>
 
 <div id="matlab"></div>
