--- a/program/java/applet_hello.htm
+++ b/program/java/applet_hello.htm
@@ -44,8 +44,8 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>Javs &gt;&gt; Applet</h3>
-<p><b>hello, world!</b></p>
+<h3>Javs &gt;&gt; Java Applet</h3>
+<p><b>Hello, world!</b></p>
 <hr size="1">
 <p>
 main.java
@@ -55,9 +55,9 @@ import java.awt.Graphics;
 import java.applet.Applet;
 
 public class main extends Applet {
-  public void paint(Graphics g) {
-    g.drawString("Hello, world!", 10, 10);
-  }
+    public void paint(Graphics g) {
+        g.drawString("Hello, world!", 10, 10);
+    }
 }
 </pre><br>
 
@@ -73,10 +73,10 @@ main.html
 </p>
 <pre>
 &lt;html&gt;
-  &lt;body&gt;
-    &lt;applet code="main.class" width="200" height="100"&gt;
-    &lt;/applet&gt;
-  &lt;/body&gt;
+    &lt;body&gt;
+        &lt;applet code="main.class" width="200" height="100"&gt;
+        &lt;/applet&gt;
+    &lt;/body&gt;
 &lt;/html&gt;
 </pre><br>
 
