Node.js How to use Promise().

--- a/program.htm
+++ b/program.htm
@@ -2416,6 +2416,11 @@ Java</h3>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="program/java/npm_hello.htm">
     Hello, world!</a><br>
+    
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="program/java/npm_promise.htm">
+    如何透過Promise等待事件完成</a><br>
+
 &oplus;
 <b>JavaScript</b><br>
 
