Node.js Added ping example.

--- a/program.htm
+++ b/program.htm
@@ -2418,6 +2418,10 @@ Java</h3>
     Hello, world!</a><br>
     
     &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="program/java/npm_ping.htm">
+    ping</a><br>
+    
+    &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="program/java/npm_promise.htm">
     如何透過Promise等待事件完成</a><br>
 
