--- a/handheld/pyra/build_kernel.htm
+++ b/handheld/pyra/build_kernel.htm
@@ -60,12 +60,11 @@
 $ cd
 $ git clone http://git.goldelico.com/letux-kernel.git
 $ cd letux-kernel
-$ git checkout letux-5.6.y
 $ ARCH=arm CROSS_COMPILE=arm-linux-gnueabihf- make pyra_defconfig
 $ ARCH=arm CROSS_COMPILE=arm-linux-gnueabihf- make all -j4
 </pre>
 <p>
-P.S. omap5-letux-cortex15-v5.3+pyra-v5.3.dtb
+P.S. zImage、omap5-letux-cortex15-v5.3+pyra-v5.3.dtb
 </p>
 
 <p>
