Pyra How to replace as ext4 filesystem.

--- a/handheld.htm
+++ b/handheld.htm
@@ -263,6 +263,10 @@ printk使用的UART</a><br>
 如何製作可開機SDCard</a><br>
 
 &lowast;
+<a href="handheld/pyra/ext4.htm">
+如何將檔案系統替換成ext4</a><br>
+
+&lowast;
 <a href="handheld/pyra/loady.htm">
 如何透過minicom傳送檔案到U-Boot</a><br>
 
