--- a/driver.htm
+++ b/driver.htm
@@ -229,6 +229,10 @@ Linux Device Driver (LDD)</h3>
 <b>Falco</b><br>
     
     &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="driver/ldd/falco_arch.htm">
+    架構簡介</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="driver/ldd/falco_install.htm">
     install falco</a><br>
 
