--- a/driver.htm
+++ b/driver.htm
@@ -257,6 +257,10 @@ Linux Device Driver (LDD)</h3>
     build libscap、libsinsp</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="driver/ldd/falco_k8saudit.htm">
+    如何開啟k8saudit rule</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="driver/ldd/falco_start_ebpf.htm">
     如何載入modern bpf driver</a><br>
 
