--- a/driver/ldd/falco_build_plugins_k8saudits.htm
+++ b/driver/ldd/falco_build_plugins_k8saudits.htm
@@ -61,6 +61,7 @@ $ cd
 $ git clone https://github.com/falcosecurity/plugins
 $ cd plugins/plugins/k8saudit
 $ make
+$ sudo cp libk8saudit.so /usr/share/falco/plugins/libk8saudit.so
 </pre>
 <p>
 P.S. 必須確保Golang版本大於1.16
