D88 How to optimize the running speed for double variable from gcc flags.

--- a/umpc.htm
+++ b/umpc.htm
@@ -390,6 +390,10 @@ RTC取得、設定</a><br>
 如何使用usb gadget gserial</a><br>
 
 &lowast;
+<a href="umpc/d88/opt_double_float.htm">
+如何改善double、float的執行速度</a><br>
+
+&lowast;
 <a href="umpc/d88/mount_mtd.htm">
 如何使用usb gadget file storage</a><br>
 
