S32G399 Fixed ntp update issue.

--- a/mcu.htm
+++ b/mcu.htm
@@ -132,6 +132,7 @@
     <a href="#nanopi-m3"><img src="img/photos/nanopi-m3.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(ARM Cortex-A53) S5P6818"/></a>
     <a href="#pi-3"><img src="img/photos/pi-3.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(ARM Cortex-A53) BCM2837"/></a>
     <a href="#rk3328-cc"><img src="img/photos/rk3328-cc.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(ARM Cortex-A53) RK3328"/></a>
+    <a href="#s32g399"><img src="img/photos/s32g399.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(ARM Cortex-A53) S32G399"/></a>
     <a href="#mips"><img src="img/photos/mips.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="MIPS"/></a>
     <a href="#newton"><img src="img/photos/newton.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(MIPS II) M200 (Newton1)"/></a>
     <a href="#js9331"><img src="img/photos/js9331.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(MIPS 24Kc) AR9331 (JS9331)"/></a>
@@ -3102,6 +3103,16 @@ UART</a><br>
 &lowast;
 <a href="mcu/rk3328/build_all.htm">
 Build All</a><br>
+<br><br><br><br>
+
+<div id="s32g399"></div>
+<h3><img src="img/photos/s32g399.jpg" class="floatLeft"/>
+<b>(ARM Cortex-A53)</b> S32G399</h3>
+<hr size="1"><br><br><br><br><br>
+
+&lowast;
+<a href="mcu/s32g399/fix_ntp.htm">
+解決"ntpd -gq resulted in error"問題</a><br>
 <br><br><br><br>
 
 <div id="mips"></div>
