--- a/mcu/s32g399/fix_ntp.htm
+++ b/mcu/s32g399/fix_ntp.htm
@@ -104,9 +104,12 @@ root@v2xdomu:~# python3 ~/ota/demo/update_monitor.py
 </pre><br>
 
 <p>
-解法(dom0)：
+解法如下：<br>
+dom0
 </p>
 <pre>
+# ~/ota/demo/ota_agents_controller.sh restart
+
 # vim /etc/ntp.conf
     driftfile /var/lib/ntp/ntp.drift
 
@@ -126,12 +129,14 @@ root@v2xdomu:~# python3 ~/ota/demo/update_monitor.py
     server tick.stdtime.gov.tw
 
 # ntpd -gq
-</pre>
+</pre><br>
 
 <p>
-解法(v2xdomu)：
+ v2xdomu
 </p>
 <pre>
+# ~/ota/demo/otamatic_controller.sh restart
+
 # vim ~/ota/demo/update_monitor.py
     @staticmethod
         def sync_system_datetime():
@@ -142,7 +147,10 @@ root@v2xdomu:~# python3 ~/ota/demo/update_monitor.py
             #UpdateMonitor.execute_command(f"ssh root@{DOM0_IP} {SSH_CONNECTION_PARAAMS} '{sync_datetime_cmd}'")
 
 # python3 ~/ota/demo/update_monitor.py
-</pre><br>
+</pre>
+<p>
+<img src="fix_ntp/1.jpg" class="maxSize">
+</p>
 
 <p>
 <br><a href="../../mcu.htm">返回上一頁</a>
