Gaviar Added v2 schematic.

--- a/handheld.htm
+++ b/handheld.htm
@@ -859,6 +859,10 @@ Gaviar (小志掌機)</h3>
 電路圖</a><br>
 
 &lowast;
+<a href="handheld/gaviar/sch3.htm">
+電路圖(v2)</a><br>
+
+&lowast;
 <a href="handheld/gaviar/lcd.htm">
 LCD腳位</a><br>
 
