D7 Added review page.

--- a/umpc.htm
+++ b/umpc.htm
@@ -75,6 +75,7 @@
 <br><br>
 <p>
     <a href="#d5"><img src="img/photos/d5.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="iriver Dicple D5"/></a>
+    <a href="#d7"><img src="img/photos/d7.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="iriver Dicple D7"/></a>
     <a href="#d8"><img src="img/photos/d8.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="iriver Dicple D8"/></a>
     <a href="#d88"><img src="img/photos/d88.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="iriver Dicple D88"/></a>
     <a href="#d100"><img src="img/photos/d100.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="iriver Dicple D100"/></a>
@@ -213,6 +214,20 @@ iriver Dicple D5</h3>
 &lowast;
 <a href="umpc/d5/mmap.htm">
 Memory Map</a><br>
+<br><br><br><br>
+
+<div id="d7"></div>
+<h3><img src="img/photos/d7.jpg" class="floatLeft"/>
+iriver Dicple D7</h3>
+<hr size="1"><br><br><br><br><br>
+
+&lowast;
+<a href="umpc/d7/review.htm">
+介紹</a><br>
+
+&lowast;
+<a href="umpc/d7/teardown.htm">
+拆機</a><br>
 <br><br><br><br>
 
 <div id="d8"></div>
