--- a/umpc/d100/review.htm
+++ b/umpc/d100/review.htm
@@ -51,7 +51,7 @@
 簡要規格
 </p>
 <table>
-  <tr><th>CPU</th><td>TCC7901 ARM926EJ-S Dual-core 500MHZ</td></tr>
+  <tr><th>CPU</th><td>Telechip TCC7901 ARM926EJ-S Dual-core 500MHZ</td></tr>
   <tr><th>RAM</th><td>64MB</td></tr>
   <tr><th>Flash</th><td>4GB</td></tr>
   <tr><th>Screen</th><td>4.3" 480x272 電阻觸控</td></tr>
