--- a/umpc/d88/review.htm
+++ b/umpc/d88/review.htm
@@ -53,7 +53,7 @@
 簡要規格
 </p>
 <table>
-  <tr><th>CPU</th><td>Ingenic JZ4755 336MHZ</td></tr>
+  <tr><th>CPU</th><td>Ingenic JZ4755 MIPS32 rev1 336MHZ</td></tr>
   <tr><th>RAM</th><td>64MB</td></tr>
   <tr><th>Flash</th><td>4GB</td></tr>
   <tr><th>Screen</th><td>4.3" 480x272 電阻觸控</td></tr>
