Android How to create virtual adb device in ubuntu system.

--- a/system.htm
+++ b/system.htm
@@ -367,6 +367,12 @@ shell script "$、{}、%、#"用途</a><br>
     解決"perf_event_open(..., PERF_FLAG_FD_CLOEXEC) failed with unexpected error 13"問題</a><br>
 
 &oplus;
+<b>Android</b><br>
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="system/debian/android_adb.htm">
+    virtual adb device</a><br>
+
+&oplus;
 <b>VirtualBox</b><br>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="system/debian/resize_vdi.htm">
