--- a/system.htm
+++ b/system.htm
@@ -369,6 +369,10 @@ shell script "$、{}、%、#"用途</a><br>
 &oplus;
 <b>Android</b><br>
     &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="system/debian/android_emu.htm">
+    android emulator</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="system/debian/android_adb.htm">
     virtual adb device</a><br>
 
