--- a/handheld/pyra/build_uboot.htm
+++ b/handheld/pyra/build_uboot.htm
@@ -53,13 +53,28 @@
 1. <a href="https://dev.pyra-handheld.com/daveshah/pyra-uboot/-/tree/pyra-alt-ddr3">pyra-alt-ddr3</a><br>
 2. <a href="https://forum.digikey.com/t/debian-getting-started-with-the-omap5432-uevm/12455">debian-getting-started-with-the-omap5432-uevm</a><br><br>
 
-步驟如下：
+pyra-uboot
 </p>
 <pre>
 $ cd
 $ git clone https://dev.pyra-handheld.com/daveshah/pyra-uboot/ -b pyra-alt-ddr3
 $ cd pyra-uboot
 $ ARCH=arm CROSS_COMPILE=arm-linux-gnueabi- make omap5_pyra_4gb_defconfig
+$ ARCH=arm CROSS_COMPILE=arm-linux-gnueabi- make -j4
+
+$ sudo dd if=/dev/zero of=/dev/sdX bs=1M count=10
+$ sudo dd if=MLO of=/dev/sdX count=2 seek=1 bs=128k
+$ sudo dd if=u-boot.img of=/dev/sdX count=4 seek=1 bs=384k
+</pre><br>
+
+<p>
+letux-uboot
+</p>
+<pre>
+$ cd
+$ git clone git://git.goldelico.com/letux-uboot.git
+$ cd letux-uboot
+$ ARCH=arm CROSS_COMPILE=arm-linux-gnueabi- make pandora_pyra_lc15_defconfig
 $ ARCH=arm CROSS_COMPILE=arm-linux-gnueabi- make -j4
 
 $ sudo dd if=/dev/zero of=/dev/sdX bs=1M count=10
