--- a/system/debian/ssh_tunnel.htm
+++ b/system/debian/ssh_tunnel.htm
@@ -51,21 +51,21 @@
 參考資料：<br>
 1. <a href="https://johnliu55.tw/ssh-tunnel.html">ssh-tunnel</a><br><br>
 
-在local_ip建立tunnel(執行指令後，會提示ssh進server_ip)
+建立Tunnel(執行指令後，會提示使用SSH進Server)
 </p>
 <pre>
-$ ssh -L 127.0.0.1:9999:192.168.1.27:22 xxx@server_ip
+$ ssh -L 127.0.0.1:9999:192.168.1.27:22 xxx@server_ip -N -f
 </pre>
 <p>
-P.S. 情境：只有local_ip可以連到server_ip，只有server_ip可以連到192.168.1.27(port 22)<br><br>
+<b>情境</b>：Local只能連到Server且只有Server可以連到Target 192.168.1.27(Port 22)<br><br>
 
-local_ip連接到target_pc(192.168.1.27)
+Local連接到Target(192.168.1.27)
 </p>
 <pre>
 $ ssh -p yyy@127.0.0.1:9999
 </pre>
 <p>
-P.S. yyy是target_pc帳號
+P.S. yyy是Target的帳號
 </p>
 
 <p>
