--- a/umpc/micropc/review.htm
+++ b/umpc/micropc/review.htm
@@ -54,7 +54,7 @@
   <tr><th>CPU</th><td>Intel Celeron N4100</td></tr>
   <tr><th>GPU</th><td>Intel UHD Graphics 600</td></tr>
   <tr><th>RAM</th><td>8GB</td></tr>
-  <tr><th>Storage</th><td>128GB M.2 SSD</td></tr>
+  <tr><th>Storage</th><td>128GB(M.2 2242)</td></tr>
   <tr><th>Screen</th><td>6.0" 1280×720</td></tr>
   <tr><th>Keyboard</th><td>6 Rows QWERTY 支援背光</td></tr>
   <tr><th>Slot</th><td>MicroSD</td></tr>
