--- a/program/python/commands.htm
+++ b/program/python/commands.htm
@@ -48,13 +48,26 @@
 <p><b>取得Command Line結果</b></p>
 <hr size="1">
 <p>
-程式碼
+參考資訊：<br>
+1. <a href="https://stackoverflow.com/questions/4760215/running-shell-command-and-capturing-the-output">running-shell-command-and-capturing-the-output</a><br><br>
+
+2.x
 </p>
 <pre class="brush:python">
 import commands
 
 ret = commands.getoutput('ls')
 print ret
+</pre><br>
+
+<p>
+3.x
+</p>
+<pre class="brush:python">
+import subprocess
+
+ret = subprocess.run(['ls', '-l'], stdout=subprocess.PIPE).stdout.decode('utf-8')
+print(ret)
 </pre><br>
 
 <p>
