3DS Hardware modding: added 600mA and usb type-c.

--- a/handheld.htm
+++ b/handheld.htm
@@ -5678,6 +5678,10 @@ Nintendo 3DS</h3>
 &lowast;
 <a href="handheld/3ds/review.htm">
 介紹</a><br>
+
+&lowast;
+<a href="handheld/3ds/mod.htm">
+改造電池、充電接頭</a><br>
 <br><br><br><br>
 
 <div id="new3ds"></div>
