--- a/handheld/3ds/mod.htm
+++ b/handheld/3ds/mod.htm
@@ -29,7 +29,7 @@
   <link rel="stylesheet" type="text/css" href="../../css/print.css" media="print" />
   
   <script type="text/javascript" src="../../scripts/shCore.js"></script>
-  <script type="text/javascript" src="../../scripts/shBrushCpp.js"></script>
+  <script type="text/javascript" src="../../scripts/shBrushScad.js"></script>
 
   <!-- Conditional comment to apply opacity fix for IE #content background.
        Invalid CSS, but can be removed without harming design -->
@@ -68,13 +68,13 @@
 
 OpenSCAD<br>
 <img src="mod/5.jpg" class="maxSize"><br>
-<pre>
+<pre class="brush:scad">
 $fn = 50;
 
 difference() {
     cube([14.5, 4, 4.5]);
     translate([4.5, 5, 1.5]) {
-        rotate([90, 0, 0]){
+        rotate([90, 0, 0]) {
             hull() {
                 cylinder(5, 1.7, 1.7);
                 translate([6, 0, 0]) {
@@ -95,7 +95,33 @@ difference() {
 <img src="mod/8.jpg" class="maxSize"><br><br>
 
 改造後的電池應會是1300mA + 600mA = 1900mA<br>
-<img src="mod/9.jpg" class="maxSize">
+<img src="mod/9.jpg" class="maxSize"><br><br>
+
+OpenSCAD<br>
+<img src="mod/12.jpg" class="maxSize">
+</p>
+<pre class="brush:scad">
+$fn  = 100;
+
+rotate([90, 0, 0]) {
+    cube([35.7, 5.5, 2.5]);
+}
+
+difference() {
+    translate([(35.7 - 10) / 2 + 4, 17, 0]) {
+        cylinder(5.5, 22, 22);
+    }
+    translate([-10, 0, 0]) { 
+        cube([100, 100, 10]);
+    }
+}
+</pre><br>
+
+<p>
+修補後<br>
+<img src="mod/13.jpg" class="maxSize"><br>
+<img src="mod/14.jpg" class="maxSize"><br>
+<img src="mod/15.jpg" class="maxSize">
 </p>
 
 <p>
