--- a/handheld/3ds/mod.htm
+++ b/handheld/3ds/mod.htm
@@ -64,7 +64,8 @@
 <img src="mod/3.jpg" class="maxSize"><br><br>
 
 電池使用503040 600mA、充電接頭改成USB Type-C<br>
-<img src="mod/4.jpg" class="maxSize"><br><br>
+<img src="mod/4.jpg" class="maxSize"><br>
+P.S. <b>電池+</b>要接到原本的電池座，這張圖後來忘記更新～<br><br>
 
 OpenSCAD<br>
 <img src="mod/5.jpg" class="maxSize"><br>
