3DS LL Added review page.

--- a/handheld.htm
+++ b/handheld.htm
@@ -193,6 +193,7 @@
     <a href="#nds"><img src="img/photos/nds.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Nintendo DS"/></a>
     <a href="#ndsl"><img src="img/photos/ndsl.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Nintendo DS Lite"/></a>
     <a href="#3ds"><img src="img/photos/3ds.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Nintendo 3DS"/></a>
+    <a href="#3dsll"><img src="img/photos/3dsll.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Nintendo 3DS LL"/></a>
     <a href="#new3ds"><img src="img/photos/new3ds.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Nintendo New 3DS"/></a>
     <a href="#2dsxl"><img src="img/photos/2dsxl.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Nintendo 2DS XL"/></a>
     <a href="#miyoo"><img src="img/photos/miyoo.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Miyoo"/></a>
@@ -5682,6 +5683,16 @@ Nintendo 3DS</h3>
 &lowast;
 <a href="handheld/3ds/mod.htm">
 改造電池、充電接頭</a><br>
+<br><br><br><br>
+
+<div id="3dsll"></div>
+<h3><img src="img/photos/3dsll.jpg" class="floatLeft"/>
+Nintendo 3DS LL</h3>
+<hr size="1"><br><br><br><br><br>
+
+&lowast;
+<a href="handheld/3dsll/review.htm">
+介紹</a><br>
 <br><br><br><br>
 
 <div id="new3ds"></div>
