3DS LL How to do hardware modding.

--- a/handheld.htm
+++ b/handheld.htm
@@ -5693,6 +5693,10 @@ Nintendo 3DS LL</h3>
 &lowast;
 <a href="handheld/3dsll/review.htm">
 介紹</a><br>
+
+&lowast;
+<a href="handheld/3dsll/mod.htm">
+改造電池、充電接頭</a><br>
 <br><br><br><br>
 
 <div id="new3ds"></div>
