Miyoo Mini Plus How to do screen rotation through gfx.

--- a/handheld.htm
+++ b/handheld.htm
@@ -6677,6 +6677,12 @@ repack uImage.xz</a><br>
     kallsym</a><br>
 
 &oplus;
+<b>Onion</b><br>
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/miyoo-mini-plus/onion_gfx_rotate.htm">
+    gfx screen rotation</a><br>
+
+&oplus;
 <b>Linux</b><br>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="handheld/miyoo-mini-plus/cfw_build_kernel.htm">
