Miyoo Mini Plus An example to test screen tearing.

--- a/handheld.htm
+++ b/handheld.htm
@@ -6679,6 +6679,10 @@ repack uImage.xz</a><br>
 &oplus;
 <b>Onion</b><br>
     &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/miyoo-mini-plus/onion_gfx_flip.htm">
+    gfx flip screen</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="handheld/miyoo-mini-plus/onion_gfx_rotate.htm">
     gfx screen rotation</a><br>
 
