Miyoo Mini Plus How to do RTC modding.

--- a/handheld.htm
+++ b/handheld.htm
@@ -6611,6 +6611,10 @@ Miyoo Mini Plus</h3>
 方塊圖</a><br>
 
 &lowast;
+<a href="handheld/miyoo-mini-plus/rtc.htm">
+RTC補救</a><br>
+
+&lowast;
 <a href="handheld/miyoo-mini-plus/gpio_addr.htm">
 GPIO Address</a><br>
 
