Debian How to extract ubi file.

--- a/system.htm
+++ b/system.htm
@@ -405,6 +405,10 @@ shell script "$、{}、%、#"用途</a><br>
     如何掛載ubifs檔案</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="system/debian/ubidump.htm">
+    如何解開ubifs檔案(ubidump)</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="system/debian/rename.htm">
     如何將檔名轉成小寫</a><br>
 
