--- a/mcu/am3358/build_gdb.htm
+++ b/mcu/am3358/build_gdb.htm
@@ -56,7 +56,7 @@
 <pre>
 $ cd
 $ wget https://ftp.gnu.org/gnu/gdb/gdb-8.0.tar.gz
-$ tar -pxzf gdb-8.0.tar.gz
+$ tar xvf gdb-8.0.tar.gz
 $ cd gdb-8.0
 $ export INSTALLDIR=~/gdb
 $ export PATH=$INSTALLDIR/bin:$PATH
